        - Lots of internals cleanup to eliminate result_source_instance requirement
        - added register_column and register_relationship class APIs
        - made Storage::DBI use prepare_cached safely (thanks to Tim Bunce)
        - many documentation improvements (thanks guys!)
        - added ->connection, ->connect, ->register_source and ->clone schema methods

0.04999_02 2006-01-14 07:17:35
        - Schema is now self-contained; no requirement for co-operation
        - add_relationship, relationships, relationship_info, has_relationship
        - relationship handling on ResultSource
        - all table handling now in Table.pm / ResultSource.pm
        - added GROUP BY and DISTINCT support
        - hacked around SQL::Abstract::Limit some more in DBIC::SQL::Abstract
          (this may have fixed complex quoting)
        - moved inflation to inflate_result in Row.pm
        - added $rs->search_related
        - split compose_namespace out of compose_connection in Schema
        - ResultSet now handles find
        - various *_related methods are now ->search_related->*
        - added new_result to ResultSet

0.04999_01 2005-12-27 03:33:42
        - search and related methods moved to ResultSet
        - select and as added to ResultSet attrs
        - added DBIx::Class::Table and TableInstance for table-per-class
        - added DBIx::Class::ResultSetInstance which handles proxying
          search etc. as a superclass of DBIx::Class::DB
        - assorted test and code cleanup work

0.04001 2005-12-13 22:00:00
        - Fix so set_inflated_column calls set_column
        - Syntax errors in relationship classes are now reported
        - Better error detection in set_primary_key and columns methods
        - Documentation improvements
        - Better transaction support with txn_* methods
        - belongs_to now works when $cond is a string
        - PK::Auto::Pg updated, only tries primary keys instead of all cols

0.04 2005-11-26