@@ -7,6 +7,7 @@ Revision history for DBIx::Class
         - made Storage::DBI use prepare_cached safely (thanks to Tim Bunce)
         - many documentation improvements (thanks guys!)
         - added ->connection, ->connect, ->register_source and ->clone schema methods
+	- Use croak instead of die for user errors.
 
 0.04999_02 2006-01-14 07:17:35
         - Schema is now self-contained; no requirement for co-operation
